fix - high-contrast mode - sidebar needs visual separation
- Due to how high-contrast mode works, there was no visual separation between the sidebar and the main content, adding a transparent border resolves this without having any visual impact in non-high contrast mode
- fixes #7456

--- a/client/scss/components/_main-nav.scss
+++ b/client/scss/components/_main-nav.scss
@@ -10,6 +10,7 @@
 
     .inner {
         background: $nav-grey-1;
+        border-right: 1px solid transparent; // ensure visible separation in Windows High Contrast mode
 
         @include media-breakpoint-up(sm) {
             // On medium, make it possible for the nav links to scroll.
